newtype-tools/tests/trybuild/ops/mul.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/trybuild/ops/mul.rs:5:19
  |
5 |     #[newtype(mul())]
  |                   ^

error: expected `,`
  --> tests/trybuild/ops/mul.rs:11:22
   |
11 |     #[newtype(mul(u64))]
   |                      ^

error: unexpected end of input, expected `output`
  --> tests/trybuild/ops/mul.rs:17:23
   |
17 |     #[newtype(mul(u64,))]
   |                       ^

error: expected `=`
  --> tests/trybuild/ops/mul.rs:23:30
   |
23 |     #[newtype(mul(u64, output))]
   |                              ^

error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/trybuild/ops/mul.rs:29:32
   |
29 |     #[newtype(mul(u64, output =))]
   |                                ^

error: expected `,`
  --> tests/trybuild/ops/mul.rs:35:36
   |
35 |     #[newtype(mul(u64, output = u64))]
   |                                    ^

error: unexpected end of input, expected `with`
  --> tests/trybuild/ops/mul.rs:41:37
   |
41 |     #[newtype(mul(u64, output = u64,))]
   |                                     ^

error: expected `=`
  --> tests/trybuild/ops/mul.rs:47:42
   |
47 |     #[newtype(mul(u64, output = u64, with))]
   |                                          ^

error: unexpected end of input, expected an expression
  --> tests/trybuild/ops/mul.rs:53:44
   |
53 |     #[newtype(mul(u64, output = u64, with =))]
   |                                            ^
